--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 
 #canvas {
     background-color: black;
-    border: 1px solid white;
+    border: none; /* Без рамки */
     cursor: crosshair;
 }
 
